--- a/src/app/store-app/components/header/header.component.html
+++ b/src/app/store-app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg fixed-top">
   <div class="navbar-brand">
     <a href="#">Store</a>
   </div>
@@ -9,17 +9,20 @@
       placeholder="Search products"
       [formControl]="productSearchText"
     />
-    <button class="btn_search-product" type="submit" (click)="onSubmit($event)">
-      Search
+    <button class="btn_search-product" (click)="onSubmit($event)">
+      <a><fa-icon [icon]="faSearch"></fa-icon></a>
     </button>
   </form>
   <ul class="navbar-nav">
-    <li class="nav-item"><a href="#" class="nav-item">Home</a></li>
-    <li class="nav-item"><a href="#" class="nav-item">List</a></li>
     <li class="nav-item info">
-      <span>Cantidad de productos: </span>
-      <span>Subtotal: </span>
-      <a><fa-icon [icon]="faShoppingCart"></fa-icon></a>
+      <span
+        >Cantidad de productos : <strong>{{ count }}</strong></span
+      >
+      <br />
+      <span
+        >Subtotal : <strong>$ {{ subTotal | number }}</strong></span
+      >
     </li>
+    <a class="icon"><fa-icon [icon]="faShoppingCart"></fa-icon></a>
   </ul>
 </nav>
