--- a/src/app/store-app/components/header/header.component.scss
+++ b/src/app/store-app/components/header/header.component.scss
@@ -1,10 +1,37 @@
 .navbar {
-  background-color: #acc4;
+  padding-left: 50px;
+  height: 70px;
+  background-color: #ff8d00;
+  justify-content: space-evenly;
+  .btn_search-product {
+    font-size: 14px;
+    font-stretch: semi-condensed;
+    color: #fff;
+    background-color: #ff6a00;
+    border: none;
+    border-radius: 0px;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
   .navbar-brand a {
     text-decoration: none;
+    color: #fff;
+    background-color: #ff6a00;
+    padding: 20px;
+    border-bottom-left-radius: 40px;
+    border-top-right-radius: 40px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
   .form-inline {
     display: flex;
+    width: 40%;
+    .form-control {
+      font-size: 16px;
+      color: dimgrey;
+      border-radius: 0px;
+      box-shadow: none;
+    }
   }
   .navbar-nav {
     align-items: center;
@@ -12,11 +39,44 @@
       margin-left: 20px;
     }
     .nav-item a {
+      color: #fff;
       text-decoration: none;
     }
     .info {
-      display: flex;
+      color: #fff;
+    }
+    .icon {
+      color: #fff;
+      font-size: 32px;
+      padding: 15px;
     }
   }
 }
 
+@media screen and (max-width: 425px) {
+  .navbar {
+    width: 100%;
+    height: auto;
+    padding: 5px;
+    justify-content: flex-start;
+    box-shadow: 0px 2px 5px #6e6e6ecc;
+    .navbar-brand {
+      display: none;
+    }
+    .form-inline {
+      width: 100%;
+    }
+    .navbar-nav {
+      .info {
+        margin-left: 0;
+        margin-top: 10px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 994px) {
+  .icon {
+    display: none;
+  }
+}
