--- a/src/app/store-app/components/product-list/product-list.component.scss
+++ b/src/app/store-app/components/product-list/product-list.component.scss
@@ -2,4 +2,32 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
+  margin: 10px;
+  margin-top: 40px;
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 3px #cccc;
+  padding: 20px;
+  background-color: #fff;
+  .product-image {
+    width: 150px;
+    height: 130px;
+  }
+  .btn-addToCart {
+    background-color: green;
+    color: #f2f2f2;
+    font-size: 14px;
+    margin-top: 10px;
+    border-radius: 0px;
+  }
+  .product-count {
+    text-align: center;
+    width: 16%;
+    height: 24px;
+  }
+  .contain-data {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
